--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>FS_AtencionN1</members>
-        <members>FS_AtencionN2</members>
-        <name>Queue</name>
-    </types>
-     <types>
-        <members>FS_AgenteReleases</members>
-        <members>FS_AgenteQAOmnia</members>
-        <members>FS_AgenteN2Omnia</members>
-        <members>FS_AgenteN1Omnia</members>
-        <members>FS_AgenteQACore</members>
-        <members>FS_AgenteN2Core</members>
-        <members>FS_AgenteN1Core</members>
-        <members>FS_SupervisorReleases</members>
-        <members>FS_SupervisorOmnia</members>
-        <members>FS_SupervisorCore</members>
-        <members>FS_ClienteFISA</members>
-        <name>Role</name>
-    </types>
-    <version>57.0</version>
+	<types>
+		<members>Case.FS_CSATCaso__c</members>
+		<members>Case.FS_ComentariosInternos__c</members>
+		<members>Case.FS_EncuestaEnviada__c</members>
+		<members>Case.FS_NotasReunionSatisfaccion__c</members>
+		<members>Case.FS_ResultadoEncuesta__c</members>
+		<members>Case.FS_SubEstado__c</members>
+		<name>CustomField</name>
+	</types>
+	<types>
+		<members>FS_AtencionN1</members>
+		<members>FS_AtencionN2</members>
+		<name>Queue</name>
+	</types>
+	<types>
+		<members>FS_AgenteN1Core</members>
+		<members>FS_AgenteN1Omnia</members>
+		<members>FS_AgenteN2Core</members>
+		<members>FS_AgenteN2Omnia</members>
+		<members>FS_AgenteQACore</members>
+		<members>FS_AgenteQAOmnia</members>
+		<members>FS_AgenteReleases</members>
+		<members>FS_ClienteFISA</members>
+		<members>FS_SupervisorCore</members>
+		<members>FS_SupervisorOmnia</members>
+		<members>FS_SupervisorReleases</members>
+		<name>Role</name>
+	</types>
+	<types>
+		<members>CaseStatus</members>
+		<name>StandardValueSet</name>
+	</types>
+	<version>55.0</version>
 </Package>
