--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
+		<members>Case.FS_Area__c</members>
 		<members>Case.FS_CSATCaso__c</members>
 		<members>Case.FS_ComentariosInternos__c</members>
 		<members>Case.FS_EncuestaEnviada__c</members>
 		<members>Case.FS_Modulo__c</members>
+		<members>Case.FS_MotivoInsatisfaccion__c</members>
 		<members>Case.FS_NotasReunionSatisfaccion__c</members>
 		<members>Case.FS_Producto__c</members>
 		<members>Case.FS_ResultadoEncuesta__c</members>
 		<members>Case.FS_SubEstado__c</members>
+		<members>Case.FS_SubModulo__c</members>
 		<name>CustomField</name>
+	</types>
+	<types>
+		<members>FS_AceptacionRechazoCaso__c</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>Case-Layout Cliente</members>
+		<members>Case-Layout Interno Casos</members>
+		<members>FS_AceptacionRechazoCaso__c-Formato Aceptación %2F Rechazo de Caso</members>
+		<name>Layout</name>
 	</types>
 	<types>
 		<members>FS_AtencionN1</members>
