--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
+		<members>Case.FS_AceptaRespuesta__c</members>
 		<members>Case.FS_Area__c</members>
 		<members>Case.FS_CSATCaso__c</members>
 		<members>Case.FS_ComentariosInternos__c</members>
 		<members>Case.FS_EncuestaEnviada__c</members>
+		<members>Case.FS_FechaCompromisoEntrega__c</members>
+		<members>Case.FS_InformacionCompleta__c</members>
 		<members>Case.FS_Modulo__c</members>
 		<members>Case.FS_MotivoInsatisfaccion__c</members>
 		<members>Case.FS_NotasReunionSatisfaccion__c</members>
 		<members>Case.FS_Producto__c</members>
+		<members>Case.FS_PudeSolventarPregunta__c</members>
 		<members>Case.FS_ResultadoEncuesta__c</members>
 		<members>Case.FS_SubEstado__c</members>
 		<members>Case.FS_SubModulo__c</members>
-		<members>Case.FS_FechaCompromisoEntrega__c</members>
+		<members>FS_AceptacionRechazoCaso__c.FS_Caso__c</members>
+		<members>FS_AceptacionRechazoCaso__c.FS_Cliente__c</members>
+		<members>FS_AceptacionRechazoCaso__c.FS_Comentarios__c</members>
+		<members>FS_AceptacionRechazoCaso__c.FS_MotivoInsatisfaccion__c</members>
+		<members>FS_AceptacionRechazoCaso__c.FS_Tipo__c</members>
 		<name>CustomField</name>
 	</types>
 	<types>
@@ -23,6 +31,7 @@
 		<members>Account-Formato de cuentas</members>
 		<members>Case-Layout Cliente</members>
 		<members>Case-Layout Interno Casos</members>
+		<members>Contact-Formato de contactos</members>
 		<members>FS_AceptacionRechazoCaso__c-Formato Aceptación %2F Rechazo de Caso</members>
 		<name>Layout</name>
 	</types>
