--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -75,14 +75,14 @@
 		<name>CustomObject</name>
 	</types>
 	<types>
-		<members>Encuestas_Servicio_al_Cliente2</members>
+		<!--members>Encuestas_Servicio_al_Cliente2</members-->
 		<members>Portal_para_Servicio_al_Cliente</members>
 		<name>CustomSite</name>
 	</types>
-	<types>
+	<!--types>
 		<members>Calificacindecuenta/FS_LogoFisaServicios.png</members>
 		<name>Document</name>
-	</types>
+	</types-->
 	<types>
 		<members>FS_CorreosClientesCasos</members>
 		<members>FS_CorreosClientesCasos/FS_AnalisisCaso</members>
@@ -95,7 +95,7 @@
 		<name>EmailTemplate</name>
 	</types>
 	<types>
-		<members>Encuestas_Servicio_al_Cliente3</members>
+		<!--members>Encuestas_Servicio_al_Cliente3</members-->
 		<members>Portal_para_Servicio_al_Cliente1</members>
 		<name>ExperienceBundle</name>
 	</types>
@@ -126,7 +126,11 @@
 		<name>LightningComponentBundle</name>
 	</types>
 	<types>
-		<members>Encuestas Servicio al Cliente%2E</members>
+		<members>SFDC_Default_Navigation_Portal_para_Servicio_al_Cliente</members>
+		<name>NavigationMenu</name>
+	</types>
+	<types>
+		<!--members>Encuestas Servicio al Cliente%2E</members-->
 		<members>Portal para Servicio al Cliente</members>
 		<name>Network</name>
 	</types>
@@ -173,7 +177,7 @@
 		<name>Role</name>
 	</types>
 	<types>
-		<members>Encuestas_Servicio_al_Cliente3</members>
+		<!--members>Encuestas_Servicio_al_Cliente3</members-->
 		<members>Portal_para_Servicio_al_Cliente1</members>
 		<name>SiteDotCom</name>
 	</types>
@@ -192,7 +196,7 @@
 		<members>FS_LogoMuySatisfecho</members>
 		<members>FS_LogoNeutral</members>
 		<members>FS_LogoSatisfecho</members>
-		<members>SNA_Encuestas_Servicio_al_Cliente3_sf_default_cdn_5dmll</members>
+		<!--members>SNA_Encuestas_Servicio_al_Cliente3_sf_default_cdn_5dmll</members-->
 		<members>SNA_Portal_para_Servicio_al_Cliente1_sf_default_cdn_fLgxZ</members>
 		<name>StaticResource</name>
 	</types>
