--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -6,10 +6,10 @@
 		<name>BusinessProcess</name>
 	</types>
 	<types>
-		<members>Case.FS_SubEstado__c</members>
 		<members>Case.FS_1erCostoAprobado__c</members>
 		<members>Case.FS_FechaAprobacion1erCosto__c</members>
 		<members>Case.FS_NumeroHorasSolicitud__c</members>
+		<members>Case.FS_SubEstado__c</members>
 		<members>Case.FS_UsuarioAprobador1erCosto__c</members>
 		<name>CustomField</name>
 	</types>
@@ -18,6 +18,8 @@
 		<name>FlexiPage</name>
 	</types>
 	<types>
+		<members>fs_CampoPendienteCaso</members>
+		<members>fs_CrearCaso</members>
 		<members>fs_Encuesta</members>
 		<name>LightningComponentBundle</name>
 	</types>
@@ -34,13 +36,13 @@
 		<name>QuickAction</name>
 	</types>
 	<types>
-		<members>CaseStatus</members>
-		<name>StandardValueSet</name>
-	</types>
-	<types>
 		<members>Case.FS_Consulta</members>
 		<members>Case.FS_Solicitud</members>
 		<name>RecordType</name>
+	</types>
+	<types>
+		<members>CaseStatus</members>
+		<name>StandardValueSet</name>
 	</types>
 	<version>55.0</version>
 </Package>
