--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
+		<members>CaseTriggerHelper</members>
+		<name>ApexClass</name>
+	</types>
+	<types>
 		<members>Case.FS_CasoSolicitud</members>
 		<members>Case.FS_Casos</members>
 		<name>BusinessProcess</name>
