--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
 	<types>
+		<members>CaseTriggerHandler</members>
 		<members>CaseTriggerHelper</members>
 		<name>ApexClass</name>
 	</types>
@@ -18,8 +19,22 @@
 		<name>CustomField</name>
 	</types>
 	<types>
+		<members>FS_HistorialDescripcionCaso__c</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
+		<members>FS_CorreosClientesCasos/FS_EnvioPrimerCosto</members>
+		<name>EmailTemplate</name>
+	</types>
+	<types>
 		<members>FS_CasoPaginaRegistro</members>
 		<name>FlexiPage</name>
+	</types>
+	<types>
+		<members>Case-Layout Cliente</members>
+		<members>Case-Layout Interno Casos</members>
+		<members>FS_HistorialDescripcionCaso__c-Formato Historial de Descripción</members>
+		<name>Layout</name>
 	</types>
 	<types>
 		<members>fs_CampoPendienteCaso</members>
@@ -36,6 +51,7 @@
 		<name>PermissionSet</name>
 	</types>
 	<types>
+		<members>Case.FS_CamposControlSolicitud</members>
 		<members>Case.FS_DatosAprobacinSolicitud</members>
 		<name>QuickAction</name>
 	</types>
