--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -14,6 +14,7 @@
 		<members>Case.FS_1erCostoAprobado__c</members>
 		<members>Case.FS_FechaAprobacion1erCosto__c</members>
 		<members>Case.FS_NumeroHorasSolicitud__c</members>
+		<members>Case.FS_PudeSolventarPregunta__c</members>
 		<members>Case.FS_SubEstado__c</members>
 		<members>Case.FS_UsuarioAprobador1erCosto__c</members>
 		<name>CustomField</name>
