--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -38,6 +38,7 @@
 		<name>CustomField</name>
 	</types>
 	<types>
+		<members>FS_CorreoElectronicoServicio</members>
 		<members>FS_DiasEnvioEncuesta</members>
 		<name>CustomLabel</name>
 	</types>
