--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -6,6 +6,8 @@
 		<members>CommunitiesLandingController</members>
 		<members>ControladorCrearCaso</members>
 		<members>ControladorEncuesta</members>
+		<members>FeedCommentTriggerHandler</members>
+		<members>FeedCommentTriggerHelper</members>
 		<members>JobValidacionRespuesta</members>
 		<members>TrabajoAgenteHandler</members>
 		<members>TrabajoAgenteHelper</members>
@@ -17,6 +19,7 @@
 	</types>
 	<types>
 		<members>CaseTrigger</members>
+		<members>FeedCommentTrigger</members>
 		<members>TrabajoAgenteTrigger</members>
 		<name>ApexTrigger</name>
 	</types>
@@ -37,6 +40,7 @@
 		<members>Case.FS_1erCostoAprobado__c</members>
 		<members>Case.FS_Acepta1erCosto__c</members>
 		<members>Case.FS_AceptaRespuesta__c</members>
+		<members>Case.FS_AprobacionDisenioTecnico__c</members>
 		<members>Case.FS_AprobacionSolucionIPN2__c</members>
 		<members>Case.FS_AprobacionSolucionIPRelease__c</members>
 		<members>Case.FS_Area__c</members>
@@ -82,6 +86,7 @@
 		<members>Case.FS_Referencia__c</members>
 		<members>Case.FS_ResultadoEncuesta__c</members>
 		<members>Case.FS_RolPropietario__c</members>
+		<members>Case.FS_SolucionCortoPlazo__c</members>
 		<members>Case.FS_SubEstadoQueSePideInformacion__c</members>
 		<members>Case.FS_SubEstado__c</members>
 		<members>Case.FS_SubModulo__c</members>
@@ -96,6 +101,7 @@
 		<members>Case.FS_UrlAmbientePruebas__c</members>
 		<members>Case.FS_UsuarioAprobacionSolucionIPRelease__c</members>
 		<members>Case.FS_UsuarioAprobador1erCosto__c</members>
+		<members>Case.FS_UsuarioAprobadorDT__c</members>
 		<members>Case.FS_UsuarioAprobadorSolucionIPN2__c</members>
 		<members>User.FS_FechaUltimaAprobacion__c</members>
 		<name>CustomField</name>
@@ -160,16 +166,19 @@
 		<name>PermissionSet</name>
 	</types>
 	<types>
+		<members>Case.FS_AprobacionDisenioTecnico</members>
 		<members>Case.FS_AprobacionSolucionIPN2</members>
 		<members>Case.FS_AprobacionSolucionIPRelease</members>
 		<members>Case.FS_CamposControlConsulta</members>
 		<members>Case.FS_CamposControlIncidente</members>
+		<members>Case.FS_CamposControlIncidenteDefinitivo</members>
 		<members>Case.FS_CamposControlSolicitud</members>
 		<members>Case.FS_DatosAprobacinSolicitud</members>
 		<members>Case.FS_DatosEncuesta</members>
 		<members>Case.FS_DatosRespuesta</members>
 		<members>Case.FS_Descripcion</members>
 		<members>Case.FS_DetalleCaso</members>
+		<members>Case.FS_ElaboracinDisenioTecnico</members>
 		<members>Case.FS_InformacionWeb</members>
 		<members>Case.FS_RevisionDocumentacion</members>
 		<members>Case.FS_ValidacionInformacionIncidente</members>
@@ -215,6 +224,7 @@
 	<types>
 		<members>Case.FS_ValidacionFechaCompromisoDesarrollo</members>
 		<members>Case.FS_ValidacionFechaCompromisoEntrega</members>
+		<members>Case.FS_ValidacionRechazoDisenioTecnico</members>
 		<members>Case.FS_ValidacionRechazoIPRelease</members>
 		<members>Case.FS_ValidacionRechazoSolucionIPN2</members>
 		<name>ValidationRule</name>
